--- a/wp-content/plugins/crown-blocks/src/block-team-member-index/editor.scss
+++ b/wp-content/plugins/crown-blocks/src/block-team-member-index/editor.scss
@@ -2,12 +2,9 @@
 
 .wp-block[data-type="crown-blocks/team-member-index"] {
 	.wp-block-crown-blocks-team-member-index {
-		form.filters,
+		form.feed-filters,
 		a {
 			pointer-events: none;
-		}
-		article {
-			display: flex;
 		}
 	}
 }
