--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1373,3 +1373,441 @@
 		}
 	}
 }
+
+
+/*	Team Member Index
+---------------------------------------------------------*/
+
+.wp-block-crown-blocks-team-member-index {
+	.post-feed {
+		> .inner {
+			display: flex;
+			flex-wrap: wrap;
+			margin: 0 -.5rem -2rem;
+			@include media-breakpoint-up(md) {
+				margin: 0 -1rem -1rem;
+			}
+			> .alert-wrapper {
+				width: 100%;
+				padding: 0 .5rem 2rem;
+				@include media-breakpoint-up(md) {
+					padding: 0 1rem 1rem;
+				}
+			}
+		}
+	}
+	article.type-team_member {
+		width: 50%;
+		display: flex;
+		transition: background-color .2s;
+		&.active {
+			background-color: rgba($primary, .1);
+			@include media-breakpoint-up(md) {
+				background-color: transparent;
+			}
+			a {
+				.entry-headshot-photo {
+					.image.overlay {
+						opacity: 1;
+						visibility: visible;
+						transition-delay: 0s;
+					}
+				}
+				.entry-link {
+					opacity: 1;
+					span:after {
+						left: 0;
+						opacity: 1;
+					}
+				}
+			}
+		}
+		&.loading {
+			.entry-headshot-photo {
+				.image:before {
+					opacity: 1;
+					visibility: visible;
+					transition-delay: 0s;
+				}
+			}
+		}
+		a {
+			display: flex;
+			color: inherit;
+			width: 100%;
+			padding: .5rem;
+			padding-bottom: 1.5rem;
+			@include media-breakpoint-up(md) {
+				padding: 1rem;
+			}
+			&:hover {
+				.entry-headshot-photo {
+					.image.overlay {
+						opacity: 1;
+						visibility: visible;
+						transition-delay: 0s;
+					}
+				}
+				.entry-link {
+					opacity: 1;
+					span:after {
+						left: 0;
+						opacity: 1;
+					}
+				}
+			}
+			> .inner {
+				display: flex;
+				width: 100%;
+				flex-direction: column;
+				@include media-breakpoint-up(lg) {
+					flex-direction: row;
+				}
+			}
+		}
+		.entry-headshot-photo {
+			margin-bottom: .5rem;
+			@include media-breakpoint-up(md) {
+				margin-bottom: 1rem;
+			}
+			@include media-breakpoint-up(lg) {
+				width: 40%;
+				margin-right: 1.5rem;
+				flex: 0 0 40%;
+				margin-bottom: 0;
+			}
+			> .inner {
+				height: 0;
+				position: relative;
+				padding-top: 125%;
+				background-color: $gray;
+			}
+			.image {
+				position: absolute;
+				left: 0;
+				right: 0;
+				top: 0;
+				bottom: 0;
+				background-position: center;
+				background-repeat: no-repeat;
+				background-size: cover;
+				mix-blend-mode: luminosity;
+				filter: grayscale(1);
+				opacity: .75;
+				transition: opacity .2s, filter .2s;
+				&.overlay {
+					opacity: 0;
+					visibility: hidden;
+					transition: opacity .2s, visibility 0s .2s;
+					filter: none;
+					mix-blend-mode: normal;
+					&:after {
+						display: none;
+					}
+				}
+				img {
+					display: none;
+				}
+				&:after {
+					content: '';
+					display: block;
+					width: 2rem;
+					height: 2rem;
+					border: 4px solid #fff;
+					border-radius: 10rem;
+					border-top-color: transparent;
+					position: absolute;
+					left: 50%;
+					top: 50%;
+					margin-left: -1rem;
+					margin-top: -1rem;
+					animation: spinner 1s infinite linear;
+					transition: opacity .2s, visibility 0s .2s;
+					opacity: 0;
+					visibility: hidden;
+					z-index: 10;
+				}
+			}
+		}
+		.entry-teaser {
+			flex: 1 1 auto;
+			display: flex;
+			flex-direction: column;
+			> .push {
+				flex: 1 1 auto;
+			}
+		}
+		.entry-header {
+			margin-bottom: 1rem;
+			border-bottom: 4px solid $primary;
+			padding-bottom: .5rem;
+			@include media-breakpoint-up(md) {
+				padding-bottom: .75rem;
+				border-bottom-width: 6px;
+			}
+			@include media-breakpoint-up(xl) {
+				padding-top: 1rem;
+			}
+		}
+		.entry-title {
+			font-size: 1rem;
+			margin-bottom: .25rem;
+			@include media-breakpoint-up(md) {
+				font-size: 2rem;
+			}
+			@include media-breakpoint-up(xl) {
+				font-size: 3rem;
+			}
+		}
+		.entry-job-title {
+			line-height: $line-height-sm;
+			font-size: 0.875rem;
+			font-family: $font-family-serif;
+			font-style: italic;
+			margin-bottom: 0;
+			@include media-breakpoint-up(md) {
+				font-size: 1.25rem;
+				font-family: $font-family-base;
+				font-style: normal;
+			}
+			@include media-breakpoint-up(xl) {
+				font-size: 1.5rem;
+			}
+		}
+		.entry-centers {
+			margin-bottom: 1rem;
+			margin-top: -0.5rem;
+			@include media-breakpoint-up(md) {
+				margin-top: 0;
+			}
+			span {
+				display: inline-block;
+				line-height: $line-height-sm;
+				font-weight: 700;
+				font-size: 0.625rem;
+				letter-spacing: .05em;
+				text-transform: uppercase;
+				border-radius: 3px;
+				border: 1px solid $primary;
+				padding: .5rem .75rem;
+				@include media-breakpoint-up(md) {
+					font-size: 0.75rem;
+					border-width: 2px;
+				}
+			}
+		}
+		.entry-link {
+			margin-bottom: 0;
+			font-size: 0.875rem;
+			line-height: $line-height-sm;
+			transition: opacity .2s;
+			@include media-breakpoint-up(md) {
+				font-size: 1.25rem;
+				margin-top: 1rem;
+			}
+			@include media-breakpoint-up(lg) {
+				padding-bottom: .5rem;
+				opacity: 0;
+			}
+			span {
+				letter-spacing: .1em;
+				text-transform: uppercase;
+				font-weight: 700;
+				display: inline-block;
+				color: $blue;
+				&:after {
+					@include icon(map-get($icomoon-icons, arrow-right-long), icomoon);
+					display: block;
+					line-height: 1;
+					font-size: 2em;
+					position: relative;
+					transition: left .2s .2s, opacity .2s .2s;
+					@include media-breakpoint-up(lg) {
+						left: -.5rem;
+						opacity: 0;
+					}
+				}
+			}
+		}
+		.entry-details {
+			display: none;
+		}
+	}
+	.drawer {
+		width: 100%;
+		// padding: 0 .5rem;
+		@include media-breakpoint-up(md) {
+			padding: 0 1rem;
+		}
+		> .inner {
+			overflow: hidden;
+			transition: height .5s ease-out;
+		}
+		article.type-team_member {
+			padding-bottom: 1rem;
+			width: 100%;
+			&.flipped {
+				.entry-photo-overview {
+					order: 10;
+				}
+			}
+			&[data-color="dark-blue"] > .inner { background-color: $dark-blue; }
+			&[data-color="blue"] > .inner { background-color: $blue; }
+			&[data-color="red"] > .inner { background-color: $red; }
+			&[data-color="gray"] > .inner { background-color: $gray; }
+			&[data-color="dark-gray"] > .inner { background-color: $dark-gray; }
+			> .inner {
+				background-color: $red;
+				color: #fff;
+				position: relative;
+				width: 100%;
+				@include media-breakpoint-up(md) {
+					display: flex;
+				}
+			}
+			button.drawer-close {
+				position: absolute;
+				right: 0;
+				top: 0;
+				padding: .5rem .75rem;
+				border: none;
+				outline: none;
+				line-height: $line-height-sm;
+				font-family: $font-family-serif;
+				font-style: inherit;
+				font-size: 1rem;
+				background-color: rgba($dark, .5);
+				color: #fff;
+				transition: background-color .15s;
+				z-index: 10;
+				&:hover {
+					background-color: rgba($dark, .8);
+				}
+				&:before {
+					content: '×';
+					font-family: $font-family-base;
+					display: inline-block;
+					margin-right: .2em;
+					font-size: 1.5em;
+					line-height: 1;
+					vertical-align: top;
+					font-weight: 400;
+					margin-top: -.17em;
+					margin-bottom: -.5em;
+				}
+			}
+			.entry-photo-overview {
+				display: none;
+				padding: 2rem;
+				background-color: rgba(#fff, .1);
+				@include media-breakpoint-up(md) {
+					display: block;
+					width: percentage(5 / 12);
+				}
+				@include media-breakpoint-up(lg) {
+					width: percentage(1 / 3);
+				}
+			}
+			.entry-headshot-photo {
+				margin: -2rem -2rem 2rem;
+				width: auto;
+				.image {
+					opacity: 1;
+					mix-blend-mode: normal;
+					filter: none;
+				}
+			}
+			.entry-header {
+				border-color: #fff;
+			}
+			.entry-job-title {
+				font-family: $font-family-serif;
+				font-style: italic;
+			}
+			.entry-contact-links {
+				list-style: none;
+				padding: 0;
+				margin: 0;
+				margin-top: 1.5rem;
+				li {
+					&.linkedin a:before { background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='47.223' height='47.414' viewBox='0 0 47.223 47.414'%3E%3Cpath id='Icon_metro-linkedin' data-name='Icon metro-linkedin' d='M41.862,1.928H10.5A7.971,7.971,0,0,0,2.571,9.892V41.378A7.971,7.971,0,0,0,10.5,49.342H41.862a7.971,7.971,0,0,0,7.932-7.964V9.892A7.971,7.971,0,0,0,41.862,1.928ZM20.28,40.452h-5.9V19.708h5.9ZM17.328,16.745a2.963,2.963,0,1,1,2.951-2.963A2.957,2.957,0,0,1,17.328,16.745ZM40.94,40.452h-5.9V28.6a2.951,2.951,0,1,0-5.9,0V40.452h-5.9V19.708h5.9v3.68c1.217-1.679,3.078-3.68,5.165-3.68,3.668,0,6.641,3.317,6.641,7.408Z' transform='translate(-2.571 -1.928)' fill='%23FFFFFF'/%3E%3C/svg%3E%0A"); }
+				}
+				a {
+					display: inline-flex;
+					align-items: center;
+					padding: 0;
+					transition: opacity .15s;
+					&:hover {
+						opacity: .8;
+					}
+					&:before {
+						content: '';
+						display: block;
+						width: 2em;
+						height: 2em;
+						margin-right: .4em;
+						background-position: center;
+						background-size: contain;
+						background-repeat: no-repeat;
+					}
+				}
+			}
+			.entry-contents {
+				padding: 2rem;
+				@include media-breakpoint-up(md) {
+					width: percentage(7 / 12);
+				}
+				@include media-breakpoint-up(lg) {
+					width: percentage(2 / 3);
+					display: flex;
+					flex-direction: column;
+					padding: 3rem;
+				}
+				> .push {
+					flex: 1 1 auto;
+					+ .entry-expertise {
+						margin-top: 2rem;
+					}
+				}
+			}
+			.entry-bio {
+				font-family: $font-family-serif;
+				font-size: 1rem;
+				@include media-breakpoint-up(lg) {
+					font-size: 1.25rem;
+				}
+				.bio-heading {
+					font-size: 1.25rem;
+				}
+			}
+			.entry-expertise {
+				margin-bottom: 0;
+				.label {
+					display: block;
+					font-size: 1.25rem;
+					font-weight: 700;
+					line-height: $line-height-sm;
+					margin-bottom: .5rem;
+				}
+				.expertise {
+					display: inline-block;
+					line-height: $line-height-sm;
+					font-weight: 700;
+					font-size: 0.625rem;
+					letter-spacing: .05em;
+					text-transform: uppercase;
+					border-radius: 3px;
+					border: 1px solid #fff;
+					padding: .5rem .75rem;
+					@include media-breakpoint-up(md) {
+						font-size: 0.75rem;
+						border-width: 2px;
+					}
+				}
+			}
+		}
+	}
+	.pagination-wrapper {
+		margin-top: 3rem;
+	}
+}
