--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_pagination.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_pagination.scss
@@ -7,64 +7,36 @@ nav.pagination {
 	.nav-links {
 		display: flex;
 		flex-wrap: wrap;
-		justify-content: center;
-		margin: 0 -3px -6px;
+		margin: 0 -0.125rem -0.25rem;
 		.page-numbers {
-			border-radius: 2px;
-			position: relative;
-			color: $primary;
-			text-decoration: none;
-			padding: 4px 10px;
-			border: none;
-			outline: none;
-			box-shadow: none;
-			background-color: fade-out($primary, 1);
-			transition: background-color .15s;
-			font-size: 1rem;
-			line-height: $line-height-sm;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			min-width: 32px;
-			min-height: 32px;
-			margin: 0 3px 6px;
-			&:hover {
-				background-color: fade-out($primary, .9);
-			}
+			@extend .btn;
+			@extend .btn-light-gray;
+			margin: 0 0.125rem 0.25rem;
+			padding-left: .5rem;
+			padding-right: .5rem;
+			min-width: 3rem;
 			&.current {
-				background-color: $primary;
-				color: #fff;
+				@extend .btn-blue;
+				pointer-events: none;
 			}
 			&.prev,
 			&.next {
-				background-position: center center;
-				background-size: 14px 11px;
-				background-repeat: no-repeat;
+				&:after {
+					@include icon(map-get($icomoon-icons, arrow-right), icomoon);
+					position: relative;
+					top: .08em;
+				}
 				span {
 					display: none;
 				}
 			}
-			&.prev {
-				background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='14px' height='11px' viewBox='0 0 14 11' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle%3EFill 1%3C/title%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cpath d='M11.3454579,4.9029558 L7.73288456,1.1571952 L7.73288456,11.6510083 C7.73288456,12.7829972 6.05718424,12.7829972 6.05718424,11.6510083 L6.05718424,1.31348884 L2.66887876,5.05924944 C2.11073256,5.72268788 1.10531236,4.708167 1.66345857,4.04472856 L6.54152078,-1.33897623 C6.72757162,-1.53387738 7.09966698,-1.57260054 7.28573675,-1.33897623 L12.3129954,3.84977454 C12.9093397,4.47448652 11.9408874,5.56646032 11.3445432,4.90302189 L11.3454579,4.9029558 Z' id='Fill-1' fill='%23002F87' transform='translate(7.000000, 5.500000) scale(-1, 1) rotate(-270.000000) translate(-7.000000, -5.500000) '%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
-			}
-			&.next {
-				background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='14px' height='11px' viewBox='0 0 14 11' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle%3EFill 1%3C/title%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cpath d='M11.3454579,4.9029558 L7.73288456,1.1571952 L7.73288456,11.6510083 C7.73288456,12.7829972 6.05718424,12.7829972 6.05718424,11.6510083 L6.05718424,1.31348884 L2.66887876,5.05924944 C2.11073256,5.72268788 1.10531236,4.708167 1.66345857,4.04472856 L6.54152078,-1.33897623 C6.72757162,-1.53387738 7.09966698,-1.57260054 7.28573675,-1.33897623 L12.3129954,3.84977454 C12.9093397,4.47448652 11.9408874,5.56646032 11.3445432,4.90302189 L11.3454579,4.9029558 Z' id='Fill-1' fill='%23002F87' transform='translate(7.000000, 5.500000) rotate(-270.000000) translate(-7.000000, -5.500000) '%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
-			}
-			&:before {
-				position: absolute;
-				content: '';
-				left: 0;
-				top: 0;
-				right: 0;
-				bottom: 0;
-				border-radius: 2px;
-				border: 1px dashed $primary;
+			&.prev:after {
+				transform: rotateY(180deg);
 			}
 		}
 		span.page-numbers {
-			&:hover {
-				background-color: fade-out($primary, 1);
-			}
+			pointer-events: none;
+			color: rgba($dark, .5);
 		}
 	}
 }
