--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1424,7 +1424,7 @@
 		}
 		&.loading {
 			.entry-headshot-photo {
-				.image:before {
+				> .inner:after {
 					opacity: 1;
 					visibility: visible;
 					transition-delay: 0s;
@@ -1481,6 +1481,25 @@
 				position: relative;
 				padding-top: 125%;
 				background-color: $gray;
+				&:after {
+					content: '';
+					display: block;
+					width: 2rem;
+					height: 2rem;
+					border: 4px solid #fff;
+					border-radius: 10rem;
+					border-top-color: transparent;
+					position: absolute;
+					left: 50%;
+					top: 50%;
+					margin-left: -1rem;
+					margin-top: -1rem;
+					animation: spinner 1s infinite linear;
+					transition: opacity .2s, visibility 0s .2s;
+					opacity: 0;
+					visibility: hidden;
+					z-index: 10;
+				}
 			}
 			.image {
 				position: absolute;
@@ -1501,31 +1520,9 @@
 					transition: opacity .2s, visibility 0s .2s;
 					filter: none;
 					mix-blend-mode: normal;
-					&:after {
-						display: none;
-					}
 				}
 				img {
 					display: none;
-				}
-				&:after {
-					content: '';
-					display: block;
-					width: 2rem;
-					height: 2rem;
-					border: 4px solid #fff;
-					border-radius: 10rem;
-					border-top-color: transparent;
-					position: absolute;
-					left: 50%;
-					top: 50%;
-					margin-left: -1rem;
-					margin-top: -1rem;
-					animation: spinner 1s infinite linear;
-					transition: opacity .2s, visibility 0s .2s;
-					opacity: 0;
-					visibility: hidden;
-					z-index: 10;
 				}
 			}
 		}
