Building out single team member index

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1750,6 +1750,9 @@
 					}
 				}
 			}
+			.entry-centers {
+				display: none;
+			}
 			.entry-contents {
 				padding: 2rem;
 				@include media-breakpoint-up(md) {
