--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -19328,6 +19328,8 @@ nav.pagination {
           background-position: center;
           background-size: contain;
           background-repeat: no-repeat; }
+    .wp-block-crown-blocks-team-member-index .drawer article.type-team_member .entry-centers {
+      display: none; }
     .wp-block-crown-blocks-team-member-index .drawer article.type-team_member .entry-contents {
       padding: 2rem; }
       @media (min-width: 768px) {
@@ -21957,3 +21959,221 @@ body.single-post #main-gated-content .gated-content-form {
     body.single-post #main-gated-content .gated-content-form .disclaimer a {
       color: inherit;
       text-decoration: underline; }
+
+body.single-team_member #main .container > .inner {
+  max-width: none; }
+
+body.single-team_member article.type-team_member {
+  width: 100%; }
+  body.single-team_member article.type-team_member.flipped .entry-photo-overview {
+    -webkit-box-ordinal-group: 11;
+        -ms-flex-order: 10;
+            order: 10; }
+  body.single-team_member article.type-team_member[data-color="dark-blue"] > .inner {
+    background-color: #233053; }
+  body.single-team_member article.type-team_member[data-color="blue"] > .inner {
+    background-color: #108DBC; }
+  body.single-team_member article.type-team_member[data-color="red"] > .inner {
+    background-color: #D44457; }
+  body.single-team_member article.type-team_member[data-color="gray"] > .inner {
+    background-color: #7F94AA; }
+  body.single-team_member article.type-team_member[data-color="dark-gray"] > .inner {
+    background-color: #343a40; }
+  body.single-team_member article.type-team_member > .inner {
+    background-color: #D44457;
+    color: #fff;
+    position: relative;
+    width: 100%; }
+    @media (min-width: 768px) {
+      body.single-team_member article.type-team_member > .inner {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; } }
+  body.single-team_member article.type-team_member a {
+    color: inherit; }
+  body.single-team_member article.type-team_member .entry-photo-overview {
+    padding: 2rem;
+    background-color: rgba(255, 255, 255, 0.1); }
+    @media (min-width: 768px) {
+      body.single-team_member article.type-team_member .entry-photo-overview {
+        width: 41.66667%; } }
+    @media (min-width: 992px) {
+      body.single-team_member article.type-team_member .entry-photo-overview {
+        width: 33.33333%; } }
+  body.single-team_member article.type-team_member .entry-headshot-photo {
+    margin: -2rem -2rem 2rem;
+    width: auto; }
+    body.single-team_member article.type-team_member .entry-headshot-photo > .inner {
+      height: 0;
+      position: relative;
+      padding-top: 125%;
+      background-color: #7F94AA; }
+      body.single-team_member article.type-team_member .entry-headshot-photo > .inner:after {
+        content: '';
+        display: block;
+        width: 2rem;
+        height: 2rem;
+        border: 4px solid #fff;
+        border-radius: 10rem;
+        border-top-color: transparent;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin-left: -1rem;
+        margin-top: -1rem;
+        -webkit-animation: spinner 1s infinite linear;
+                animation: spinner 1s infinite linear;
+        -webkit-transition: opacity .2s, visibility 0s .2s;
+        transition: opacity .2s, visibility 0s .2s;
+        opacity: 0;
+        visibility: hidden;
+        z-index: 10; }
+    body.single-team_member article.type-team_member .entry-headshot-photo .image {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      -webkit-transition: opacity .2s, -webkit-filter .2s;
+      transition: opacity .2s, -webkit-filter .2s;
+      transition: opacity .2s, filter .2s;
+      transition: opacity .2s, filter .2s, -webkit-filter .2s; }
+      body.single-team_member article.type-team_member .entry-headshot-photo .image img {
+        display: none; }
+  body.single-team_member article.type-team_member .entry-header {
+    margin-bottom: 1rem;
+    border-bottom: 4px solid #fff;
+    padding-bottom: .5rem; }
+    @media (min-width: 768px) {
+      body.single-team_member article.type-team_member .entry-header {
+        padding-bottom: .75rem;
+        border-bottom-width: 6px; } }
+    @media (min-width: 1200px) {
+      body.single-team_member article.type-team_member .entry-header {
+        padding-top: 1rem; } }
+  body.single-team_member article.type-team_member .entry-title {
+    font-size: 1.5rem;
+    margin-bottom: .25rem; }
+    @media (min-width: 768px) {
+      body.single-team_member article.type-team_member .entry-title {
+        font-size: 2rem; } }
+    @media (min-width: 1200px) {
+      body.single-team_member article.type-team_member .entry-title {
+        font-size: 3rem; } }
+  body.single-team_member article.type-team_member .entry-job-title {
+    line-height: 1.2;
+    font-size: 0.875rem;
+    font-family: "utopia-std", serif;
+    font-style: italic;
+    margin-bottom: 0; }
+    @media (min-width: 768px) {
+      body.single-team_member article.type-team_member .entry-job-title {
+        font-size: 1.25rem; } }
+    @media (min-width: 1200px) {
+      body.single-team_member article.type-team_member .entry-job-title {
+        font-size: 1.5rem; } }
+  body.single-team_member article.type-team_member .entry-contact-links {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 1.5rem; }
+    body.single-team_member article.type-team_member .entry-contact-links li.linkedin a:before {
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='47.223' height='47.414' viewBox='0 0 47.223 47.414'%3E%3Cpath id='Icon_metro-linkedin' data-name='Icon metro-linkedin' d='M41.862,1.928H10.5A7.971,7.971,0,0,0,2.571,9.892V41.378A7.971,7.971,0,0,0,10.5,49.342H41.862a7.971,7.971,0,0,0,7.932-7.964V9.892A7.971,7.971,0,0,0,41.862,1.928ZM20.28,40.452h-5.9V19.708h5.9ZM17.328,16.745a2.963,2.963,0,1,1,2.951-2.963A2.957,2.957,0,0,1,17.328,16.745ZM40.94,40.452h-5.9V28.6a2.951,2.951,0,1,0-5.9,0V40.452h-5.9V19.708h5.9v3.68c1.217-1.679,3.078-3.68,5.165-3.68,3.668,0,6.641,3.317,6.641,7.408Z' transform='translate(-2.571 -1.928)' fill='%23FFFFFF'/%3E%3C/svg%3E%0A"); }
+    body.single-team_member article.type-team_member .entry-contact-links a {
+      display: -webkit-inline-box;
+      display: -ms-inline-flexbox;
+      display: inline-flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      padding: 0;
+      -webkit-transition: opacity .15s;
+      transition: opacity .15s; }
+      body.single-team_member article.type-team_member .entry-contact-links a:hover {
+        opacity: .8; }
+      body.single-team_member article.type-team_member .entry-contact-links a:before {
+        content: '';
+        display: block;
+        width: 2em;
+        height: 2em;
+        margin-right: .4em;
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat; }
+  body.single-team_member article.type-team_member .entry-centers {
+    margin-bottom: 0;
+    margin-top: 1.5rem; }
+    @media (min-width: 768px) {
+      body.single-team_member article.type-team_member .entry-centers {
+        margin-bottom: 1rem; } }
+    body.single-team_member article.type-team_member .entry-centers span {
+      display: inline-block;
+      line-height: 1.2;
+      font-weight: 700;
+      font-size: 0.625rem;
+      letter-spacing: .05em;
+      text-transform: uppercase;
+      border-radius: 3px;
+      border: 1px solid #fff;
+      padding: .5rem .75rem; }
+      @media (min-width: 768px) {
+        body.single-team_member article.type-team_member .entry-centers span {
+          font-size: 0.75rem;
+          border-width: 2px; } }
+  body.single-team_member article.type-team_member .entry-contents {
+    padding: 2rem; }
+    @media (min-width: 768px) {
+      body.single-team_member article.type-team_member .entry-contents {
+        width: 58.33333%; } }
+    @media (min-width: 992px) {
+      body.single-team_member article.type-team_member .entry-contents {
+        width: 66.66667%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        padding: 3rem; } }
+    body.single-team_member article.type-team_member .entry-contents > .push {
+      -webkit-box-flex: 1;
+          -ms-flex: 1 1 auto;
+              flex: 1 1 auto; }
+      body.single-team_member article.type-team_member .entry-contents > .push + .entry-expertise {
+        margin-top: 2rem; }
+  body.single-team_member article.type-team_member .entry-bio {
+    font-family: "utopia-std", serif;
+    font-size: 1rem;
+    font-style: italic; }
+    @media (min-width: 992px) {
+      body.single-team_member article.type-team_member .entry-bio {
+        font-size: 1.25rem; } }
+    body.single-team_member article.type-team_member .entry-bio .bio-heading {
+      font-size: 1.25rem;
+      font-style: normal; }
+  body.single-team_member article.type-team_member .entry-expertise {
+    margin-bottom: 0; }
+    body.single-team_member article.type-team_member .entry-expertise .label {
+      display: block;
+      font-size: 1.25rem;
+      font-weight: 700;
+      line-height: 1.2;
+      margin-bottom: .5rem; }
+    body.single-team_member article.type-team_member .entry-expertise .expertise {
+      display: inline-block;
+      line-height: 1.2;
+      font-weight: 700;
+      font-size: 0.625rem;
+      letter-spacing: .05em;
+      text-transform: uppercase;
+      border-radius: 3px;
+      border: 1px solid #fff;
+      padding: .5rem .75rem; }
+      @media (min-width: 768px) {
+        body.single-team_member article.type-team_member .entry-expertise .expertise {
+          font-size: 0.75rem;
+          border-width: 2px; } }
