--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1717,6 +1717,7 @@
 			}
 			.entry-header {
 				border-color: #fff;
+				padding-top: 0;
 			}
 			.entry-job-title {
 				font-family: $font-family-serif;
