--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -15088,6 +15088,10 @@ form.feed-filters {
       display: none; }
     form.feed-filters.active .filters-header .filters-nav {
       display: block; }
+    form.feed-filters.active .filters-header .search-field {
+      display: block; }
+    form.feed-filters.active .filters-header .spacer {
+      display: none; }
   form.feed-filters .filters-header {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -15234,6 +15238,49 @@ form.feed-filters {
           outline: none; }
           form.feed-filters .filters-header .filters-nav ul button:hover {
             color: #233053; }
+    form.feed-filters .filters-header .search-field {
+      display: none;
+      width: 100%;
+      margin-top: 1rem;
+      position: relative; }
+      @media (min-width: 992px) {
+        form.feed-filters .filters-header .search-field {
+          -webkit-box-ordinal-group: 100;
+              -ms-flex-order: 99;
+                  order: 99;
+          margin-top: 0;
+          -webkit-box-flex: 0;
+              -ms-flex: 0 1 auto;
+                  flex: 0 1 auto;
+          max-width: 16rem;
+          margin: -.5rem 0; } }
+      form.feed-filters .filters-header .search-field:before {
+        content: '';
+        background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%23233053" class="bi bi-search" viewBox="0 0 16 16"%3e%3cpath fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/%3e%3cpath fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/%3e%3c/svg%3e');
+        width: 1.25rem;
+        height: 1.25rem;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        position: absolute;
+        left: .75rem;
+        top: .75rem; }
+      form.feed-filters .filters-header .search-field input {
+        padding: .75rem 1.25rem;
+        -webkit-box-shadow: none;
+                box-shadow: none;
+        border: 1px solid #233053;
+        border-radius: 10rem;
+        height: auto;
+        padding-left: 2.5rem; }
+    form.feed-filters .filters-header .spacer {
+      display: none; }
+      @media (min-width: 992px) {
+        form.feed-filters .filters-header .spacer {
+          display: block;
+          -webkit-box-flex: 1;
+              -ms-flex: 1 1 auto;
+                  flex: 1 1 auto; } }
   form.feed-filters .filters-tabs {
     overflow: hidden;
     height: 0;
@@ -18828,7 +18875,7 @@ nav.pagination {
       .wp-block-crown-blocks-team-member-index article.type-team_member.active a .entry-link span:after {
         left: 0;
         opacity: 1; }
-  .wp-block-crown-blocks-team-member-index article.type-team_member.loading .entry-headshot-photo .image:before {
+  .wp-block-crown-blocks-team-member-index article.type-team_member.loading .entry-headshot-photo > .inner:after {
     opacity: 1;
     visibility: visible;
     -webkit-transition-delay: 0s;
@@ -18887,6 +18934,26 @@ nav.pagination {
       position: relative;
       padding-top: 125%;
       background-color: #7F94AA; }
+      .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo > .inner:after {
+        content: '';
+        display: block;
+        width: 2rem;
+        height: 2rem;
+        border: 4px solid #fff;
+        border-radius: 10rem;
+        border-top-color: transparent;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin-left: -1rem;
+        margin-top: -1rem;
+        -webkit-animation: spinner 1s infinite linear;
+                animation: spinner 1s infinite linear;
+        -webkit-transition: opacity .2s, visibility 0s .2s;
+        transition: opacity .2s, visibility 0s .2s;
+        opacity: 0;
+        visibility: hidden;
+        z-index: 10; }
     .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo .image {
       position: absolute;
       left: 0;
@@ -18912,30 +18979,8 @@ nav.pagination {
         -webkit-filter: none;
                 filter: none;
         mix-blend-mode: normal; }
-        .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo .image.overlay:after {
-          display: none; }
       .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo .image img {
         display: none; }
-      .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo .image:after {
-        content: '';
-        display: block;
-        width: 2rem;
-        height: 2rem;
-        border: 4px solid #fff;
-        border-radius: 10rem;
-        border-top-color: transparent;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        margin-left: -1rem;
-        margin-top: -1rem;
-        -webkit-animation: spinner 1s infinite linear;
-                animation: spinner 1s infinite linear;
-        -webkit-transition: opacity .2s, visibility 0s .2s;
-        transition: opacity .2s, visibility 0s .2s;
-        opacity: 0;
-        visibility: hidden;
-        z-index: 10; }
   .wp-block-crown-blocks-team-member-index article.type-team_member .entry-teaser {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 auto;
@@ -19093,7 +19138,7 @@ nav.pagination {
       outline: none;
       line-height: 1.2;
       font-family: "utopia-std", serif;
-      font-style: inherit;
+      font-style: italic;
       font-size: 1rem;
       background-color: rgba(52, 58, 64, 0.5);
       color: #fff;
@@ -19107,6 +19152,7 @@ nav.pagination {
         font-family: "semplicitapro", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         display: inline-block;
         margin-right: .2em;
+        font-style: normal;
         font-size: 1.5em;
         line-height: 1;
         vertical-align: top;
@@ -19133,7 +19179,8 @@ nav.pagination {
         -webkit-filter: none;
                 filter: none; }
     .wp-block-crown-blocks-team-member-index .drawer article.type-team_member .entry-header {
-      border-color: #fff; }
+      border-color: #fff;
+      padding-top: 0; }
     .wp-block-crown-blocks-team-member-index .drawer article.type-team_member .entry-job-title {
       font-family: "utopia-std", serif;
       font-style: italic; }
@@ -19165,6 +19212,8 @@ nav.pagination {
           background-position: center;
           background-size: contain;
           background-repeat: no-repeat; }
+    .wp-block-crown-blocks-team-member-index .drawer article.type-team_member .entry-centers {
+      display: none; }
     .wp-block-crown-blocks-team-member-index .drawer article.type-team_member .entry-contents {
       padding: 2rem; }
       @media (min-width: 768px) {
@@ -19189,12 +19238,14 @@ nav.pagination {
           margin-top: 2rem; }
     .wp-block-crown-blocks-team-member-index .drawer article.type-team_member .entry-bio {
       font-family: "utopia-std", serif;
-      font-size: 1rem; }
+      font-size: 1rem;
+      font-style: italic; }
       @media (min-width: 992px) {
         .wp-block-crown-blocks-team-member-index .drawer article.type-team_member .entry-bio {
           font-size: 1.25rem; } }
       .wp-block-crown-blocks-team-member-index .drawer article.type-team_member .entry-bio .bio-heading {
-        font-size: 1.25rem; }
+        font-size: 1.25rem;
+        font-style: normal; }
     .wp-block-crown-blocks-team-member-index .drawer article.type-team_member .entry-expertise {
       margin-bottom: 0; }
       .wp-block-crown-blocks-team-member-index .drawer article.type-team_member .entry-expertise .label {
@@ -19220,6 +19271,220 @@ nav.pagination {
 
 .wp-block-crown-blocks-team-member-index .pagination-wrapper {
   margin-top: 3rem; }
+
+/*	Post Index
+---------------------------------------------------------*/
+.wp-block-crown-blocks-post-index .ajax-loader {
+  max-width: 1080px;
+  margin: auto; }
+
+.wp-block-crown-blocks-post-index .post-feed > .inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 -.5rem -2rem; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-post-index .post-feed > .inner {
+      margin: 0 -1rem -2rem; } }
+  .wp-block-crown-blocks-post-index .post-feed > .inner > .alert-wrapper {
+    width: 100%;
+    padding: 0 .5rem 2rem; }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-index .post-feed > .inner > .alert-wrapper {
+        padding: 0 1rem 2rem; } }
+
+.wp-block-crown-blocks-post-index article.type-post {
+  width: 100%;
+  padding: 0 .5rem 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-post-index article.type-post {
+      padding: 0 1rem 2rem; } }
+  @media (min-width: 1200px) {
+    .wp-block-crown-blocks-post-index article.type-post:nth-child(4), .wp-block-crown-blocks-post-index article.type-post:nth-child(5) {
+      width: 50%; }
+      .wp-block-crown-blocks-post-index article.type-post:nth-child(4) .entry-featured-image, .wp-block-crown-blocks-post-index article.type-post:nth-child(5) .entry-featured-image {
+        display: none; }
+        .wp-block-crown-blocks-post-index article.type-post:nth-child(4) .entry-featured-image + .entry-teaser, .wp-block-crown-blocks-post-index article.type-post:nth-child(5) .entry-featured-image + .entry-teaser {
+          width: 100%;
+          -webkit-box-pack: start;
+              -ms-flex-pack: start;
+                  justify-content: flex-start; } }
+  .wp-block-crown-blocks-post-index article.type-post.post-format-tweet.has-external-link a, .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update.has-external-link a {
+    pointer-events: auto; }
+  .wp-block-crown-blocks-post-index article.type-post.post-format-tweet a, .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update a {
+    pointer-events: none; }
+  .wp-block-crown-blocks-post-index article.type-post.post-format-tweet .entry-teaser, .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update .entry-teaser {
+    padding: 2rem;
+    text-align: center;
+    display: block; }
+    @media (min-width: 1200px) {
+      .wp-block-crown-blocks-post-index article.type-post.post-format-tweet .entry-teaser, .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update .entry-teaser {
+        padding: 3rem; } }
+    .wp-block-crown-blocks-post-index article.type-post.post-format-tweet .entry-teaser:after, .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update .entry-teaser:after {
+      display: none; }
+  .wp-block-crown-blocks-post-index article.type-post.post-format-tweet .entry-header, .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update .entry-header {
+    margin-bottom: 1.5rem; }
+  .wp-block-crown-blocks-post-index article.type-post.post-format-tweet .entry-icon, .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update .entry-icon {
+    margin: 0 auto 1rem;
+    width: 3rem;
+    height: 3rem;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    opacity: .8; }
+  .wp-block-crown-blocks-post-index article.type-post.post-format-tweet .entry-content, .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update .entry-content {
+    font-family: "utopia-std", serif;
+    font-style: italic;
+    font-size: 1.25rem;
+    margin: auto;
+    max-width: 800px; }
+  .wp-block-crown-blocks-post-index article.type-post.post-format-tweet .entry-date, .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update .entry-date {
+    margin-top: 1.5rem; }
+  .wp-block-crown-blocks-post-index article.type-post.post-format-tweet a, .wp-block-crown-blocks-post-index article.type-post.post-format-tweet a:hover {
+    background-color: #D44457;
+    color: #fff; }
+  .wp-block-crown-blocks-post-index article.type-post.post-format-tweet .entry-icon {
+    background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="%23FFFFFF"%3e%3cpath d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/%3e%3c/svg%3e'); }
+  .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update a, .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update a:hover {
+    background-color: #108DBC;
+    color: #fff; }
+  .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update .entry-icon {
+    background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" fill="%23FFFFFF"%3e%3cpath d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/%3e%3c/svg%3e'); }
+  .wp-block-crown-blocks-post-index article.type-post a {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    color: inherit; }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-index article.type-post a {
+        -webkit-transition: background-color .2s, color .2s;
+        transition: background-color .2s, color .2s; }
+        .wp-block-crown-blocks-post-index article.type-post a:hover {
+          background-color: #233053;
+          color: #fff; }
+          .wp-block-crown-blocks-post-index article.type-post a:hover .entry-categories span {
+            border-color: #fff; }
+          .wp-block-crown-blocks-post-index article.type-post a:hover .entry-teaser:after {
+            opacity: 1;
+            margin-right: 0;
+            -webkit-transition-delay: .2s;
+                    transition-delay: .2s; } }
+    .wp-block-crown-blocks-post-index article.type-post a > .inner {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      width: 100%; }
+  .wp-block-crown-blocks-post-index article.type-post .entry-featured-image {
+    display: none;
+    width: 30%; }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-index article.type-post .entry-featured-image {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; }
+        .wp-block-crown-blocks-post-index article.type-post .entry-featured-image + .entry-teaser {
+          width: 70%;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+              -ms-flex-direction: column;
+                  flex-direction: column;
+          -webkit-box-pack: center;
+              -ms-flex-pack: center;
+                  justify-content: center; } }
+    .wp-block-crown-blocks-post-index article.type-post .entry-featured-image:before {
+      content: '';
+      display: block;
+      height: 0;
+      padding-top: 125%;
+      -ms-flex-item-align: start;
+          align-self: flex-start; }
+    .wp-block-crown-blocks-post-index article.type-post .entry-featured-image .image {
+      width: 100%;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover; }
+      .wp-block-crown-blocks-post-index article.type-post .entry-featured-image .image img {
+        display: none; }
+  .wp-block-crown-blocks-post-index article.type-post .entry-teaser {
+    width: 100%;
+    padding-bottom: 2.5rem;
+    position: relative; }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-index article.type-post .entry-teaser {
+        padding: 2rem; } }
+    @media (min-width: 1200px) {
+      .wp-block-crown-blocks-post-index article.type-post .entry-teaser {
+        padding: 3rem; } }
+    .wp-block-crown-blocks-post-index article.type-post .entry-teaser:after {
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      font-weight: normal;
+      line-height: 1;
+      font-family: icomoon;
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      line-height: 1;
+      font-size: 2rem; }
+      @media (min-width: 768px) {
+        .wp-block-crown-blocks-post-index article.type-post .entry-teaser:after {
+          right: 2rem;
+          bottom: 2rem;
+          left: auto;
+          margin-right: .5rem;
+          opacity: 0;
+          -webkit-transition: opacity .2s, margin-right .2s ease-out;
+          transition: opacity .2s, margin-right .2s ease-out; } }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-post-index article.type-post .entry-header {
+      margin-bottom: 1.5rem; } }
+  .wp-block-crown-blocks-post-index article.type-post .entry-profile-handle {
+    margin-bottom: 0;
+    font-size: 0.875rem;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    font-weight: 600;
+    line-height: 1.2; }
+  .wp-block-crown-blocks-post-index article.type-post .entry-categories {
+    margin-bottom: 1rem; }
+    .wp-block-crown-blocks-post-index article.type-post .entry-categories span {
+      display: inline-block;
+      line-height: 1.2;
+      font-weight: 700;
+      font-size: 0.625rem;
+      letter-spacing: .05em;
+      text-transform: uppercase;
+      border-radius: 10rem;
+      border: 1px solid #233053;
+      padding: .5rem .75rem;
+      -webkit-transition: border-color .2s;
+      transition: border-color .2s; }
+  @media (min-width: 1200px) {
+    .wp-block-crown-blocks-post-index article.type-post .entry-title {
+      font-size: 2.5rem; } }
+  .wp-block-crown-blocks-post-index article.type-post .entry-date {
+    margin-bottom: 0;
+    font-size: 0.875rem;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    font-weight: 600;
+    line-height: 1.2; }
+    @media (min-width: 1200px) {
+      .wp-block-crown-blocks-post-index article.type-post .entry-date {
+        margin-top: 2rem; } }
 
 .gform_wrapper {
   margin-bottom: 1rem;
