--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_forms.scss
@@ -74,6 +74,12 @@ form.feed-filters {
 			.filters-nav {
 				display: block;
 			}
+			.search-field {
+				display: block;
+			}
+			.spacer {
+				display: none;
+			}
 		}
 	}
 	.filters-header {
@@ -211,6 +217,46 @@ form.feed-filters {
 						color: $primary;
 					}
 				}
+			}
+		}
+		.search-field {
+			display: none;
+			width: 100%;
+			margin-top: 1rem;
+			position: relative;
+			@include media-breakpoint-up(lg) {
+				order: 99;
+				margin-top: 0;
+				flex: 0 1 auto;
+				max-width: 16rem;
+				margin: -.5rem 0;
+			}
+			&:before {
+				content: '';
+				background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$primary}" class="bi bi-search" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/><path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/></svg>'));
+				width: 1.25rem;
+				height: 1.25rem;
+				background-size: contain;
+				background-repeat: no-repeat;
+				background-position: center;
+				position: absolute;
+				left: .75rem;
+				top: .75rem;
+			}
+			input {
+				padding: .75rem 1.25rem;
+				box-shadow: none;
+				border: 1px solid $primary;
+				border-radius: 10rem;
+				height: auto;
+				padding-left: 2.5rem;
+			}
+		}
+		.spacer {
+			display: none;
+			@include media-breakpoint-up(lg) {
+				display: block;
+				flex: 1 1 auto;
 			}
 		}
 	}
