--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_modals.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_modals.scss
@@ -5,6 +5,7 @@
 		outline: none;
 		text-shadow: none;
 		transition: opacity .15s;
+		font-weight: 300;
 		&:not(:disabled):not(.disabled):hover,
 		&:not(:disabled):not(.disabled):focus {
 			opacity: 1;
@@ -35,5 +36,30 @@
 			color: inherit;
 			text-decoration: underline;
 		}
+	}
+}
+
+
+#subscribe-modal {
+	.modal-title {
+		font-family: $font-family-sans-serif-alt;
+		text-transform: uppercase;
+		letter-spacing: .1em;
+		font-size: 1.125rem;
+		color: $blue;
+		padding: .3rem 0;
+		span {
+			color: $primary;
+		}
+	}
+	.gform_wrapper {
+		margin-bottom: 0;
+	}
+	.gform_heading {
+		margin-bottom: 1rem;
+	}
+	.gform_title {
+		font-size: 1.75rem;
+		font-weight: 400;
 	}
 }
