--- a/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
@@ -337,3 +337,11 @@ body {
 		}
 	}
 }
+
+.wp-block[data-type="crown-blocks/post-header"] {
+	max-width: none;
+	.wp-block-crown-blocks-post-header {
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
