Adding white background to posts

--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -19363,6 +19363,7 @@ nav.pagination {
     color: inherit; }
     @media (min-width: 768px) {
       .wp-block-crown-blocks-post-index article.type-post a {
+        background-color: #fff;
         -webkit-transition: background-color .2s, color .2s;
         transition: background-color .2s, color .2s; }
         .wp-block-crown-blocks-post-index article.type-post a:hover {
