--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -19546,6 +19546,61 @@ nav.pagination {
   .wp-block-crown-blocks-post-header .sticky-share-links .social-sharing-links .menu-item a:hover {
     background-color: #cfe8f2; }
 
+/*	Resource Header
+---------------------------------------------------------*/
+.wp-block-crown-blocks-resource-header {
+  margin-left: -1rem;
+  margin-right: -1rem; }
+  .wp-block-crown-blocks-resource-header:last-child {
+    margin-bottom: 0; }
+  @media (min-width: 576px) {
+    .wp-block-crown-blocks-resource-header {
+      margin-left: -1rem;
+      margin-right: -1rem; } }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-resource-header {
+      margin-left: -1.5rem;
+      margin-right: -1.5rem; } }
+  @media (min-width: 948px) {
+    .wp-block-crown-blocks-resource-header {
+      margin-left: calc((100vw - 900px) / -2);
+      margin-right: calc((100vw - 900px) / -2); } }
+  .wp-block-crown-blocks-resource-header > .header-bg {
+    background-color: #E6EDF4; }
+  .wp-block-crown-blocks-resource-header > .inner > .header-contents {
+    padding-left: 1rem;
+    padding-right: 1rem; }
+    @media (min-width: 576px) {
+      .wp-block-crown-blocks-resource-header > .inner > .header-contents {
+        padding-left: 1rem;
+        padding-right: 1rem; } }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-resource-header > .inner > .header-contents {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem; } }
+    @media (min-width: 992px) {
+      .wp-block-crown-blocks-resource-header > .inner > .header-contents {
+        padding-left: 2rem;
+        padding-right: 2rem; } }
+    @media (min-width: 1200px) {
+      .wp-block-crown-blocks-resource-header > .inner > .header-contents {
+        padding-left: 2.5rem;
+        padding-right: 2.5rem; } }
+  .wp-block-crown-blocks-resource-header .index-title {
+    font-family: "proxima-nova", semplicitapro, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; }
+  .wp-block-crown-blocks-resource-header .article-header.text-color-light {
+    color: #fff; }
+  .wp-block-crown-blocks-resource-header .article-header.text-color-dark {
+    color: #233053; }
+  .wp-block-crown-blocks-resource-header .social-sharing-links .menu-item a {
+    border-color: #108DBC; }
+    .wp-block-crown-blocks-resource-header .social-sharing-links .menu-item a:hover {
+      background-color: rgba(16, 141, 188, 0.2); }
+  .wp-block-crown-blocks-resource-header .social-sharing-links .menu-item .icon svg {
+    fill: #233053; }
+  .wp-block-crown-blocks-resource-header .sticky-share-links .social-sharing-links .menu-item a:hover {
+    background-color: #cfe8f2; }
+
 .gform_wrapper {
   margin-bottom: 1rem;
   text-align: left; }
@@ -20226,5 +20281,11 @@ body {
 .wp-block[data-type="crown-blocks/post-header"] {
   max-width: none; }
   .wp-block[data-type="crown-blocks/post-header"] .wp-block-crown-blocks-post-header {
+    margin-left: 0;
+    margin-right: 0; }
+
+.wp-block[data-type="crown-blocks/resource-header"] {
+  max-width: none; }
+  .wp-block[data-type="crown-blocks/resource-header"] .wp-block-crown-blocks-resource-header {
     margin-left: 0;
     margin-right: 0; }
