--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_main.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_main.scss
@@ -34,7 +34,8 @@
 	> .wp-block-crown-blocks-container.alignfull,
 	> .wp-block-crown-blocks-container-featured-image.alignfull,
 	> .wp-block-crown-blocks-promo.alignfull,
-	> .wp-block-crown-blocks-post-header {
+	> .wp-block-crown-blocks-post-header,
+	> .wp-block-crown-blocks-resource-header {
 		&:first-child {
 			margin-top: -40px;
 			@include media-breakpoint-up(md) {
