Updating bg color

--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -19566,7 +19566,7 @@ nav.pagination {
       margin-left: calc((100vw - 900px) / -2);
       margin-right: calc((100vw - 900px) / -2); } }
   .wp-block-crown-blocks-resource-header > .header-bg {
-    background-color: #E6EDF4; }
+    background-color: #F1F4F7; }
   .wp-block-crown-blocks-resource-header > .inner > .header-contents {
     padding-left: 1rem;
     padding-right: 1rem; }
